--- a/main/templates/about/about.html
+++ b/main/templates/about/about.html
@@ -8,7 +8,8 @@
     <h1>О нас</h1>
   <a href="{% url 'index' %}">Главная</a>
   <a href="{% url 'about' %}">О нас</a>
-  <a href="/gallery">Галерея</a>
+   <a href="/gallery">Галерея</a>
+  <a href="/cat">Коты</a>
 <p>
     Добро пожаловать в Будку настроения! Здесь вы найдете галерею с сотнями случайных фото очаровательных собачек.
 </p>
